--- a/interface/src/index.css
+++ b/interface/src/index.css
@@ -2,7 +2,6 @@
 
 * {
     scroll-behavior: smooth; 
-    color: #0B090d;
     font-family: 'Tinos', serif;
 }
 body {
@@ -11,6 +10,8 @@ body {
 }
 a {
     text-decoration: none;
+    color: black;
+    
 }
 label,input{
     cursor: pointer;
