Estrutura da plataforma

--- a/interface/src/components/plataforma/components/Menu_plat/menu.css
+++ b/interface/src/components/plataforma/components/Menu_plat/menu.css
@@ -1,8 +1,6 @@
 /*Ornaização Geral */
 .menu-component {
-    position: fixed;
-    left: 0px;
-    top: 0px;
+    z-index: 10;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
