--- a/interface/src/components/plataforma/components/tasks/tasks.css
+++ b/interface/src/components/plataforma/components/tasks/tasks.css
@@ -11,6 +11,10 @@
     border-radius: 20px;
 }
 .title-task {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     font-size: 25px;
     margin: 0 0 10px 0;
 
