implementação de criação de tasks

--- a/interface/src/components/plataforma/components/Menu_plat/menu.css
+++ b/interface/src/components/plataforma/components/Menu_plat/menu.css
@@ -169,6 +169,10 @@
     align-items: center;
     justify-content: center;
 }
+.link-createtask {
+    text-align: start;
+    width: 100%;
+}
 
 /*DARKMODE CLASSES*/
 
