funcionalidades do menu

--- a/interface/src/components/plataforma/components/tasks/tasks.css
+++ b/interface/src/components/plataforma/components/tasks/tasks.css
@@ -52,7 +52,9 @@ button {
     border: none;
 }
 /*animations class*/
-
+.some {
+    display: none;
+}
 .completed {
     border-left: 15px solid green;
 }
