--- a/interface/src/components/login/login.css
+++ b/interface/src/components/login/login.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     width: 90%;
-    height: 80vh;
+    height: 85vh;
     border: 1px solid rgba(0, 0, 0, 0.384);
     margin: 50px auto;
     box-shadow: 15px 20px 10px rgba(0, 0, 0, 0.274);
@@ -14,7 +14,7 @@
     width: 55%;
     background-color: #f1f0f2;
     height: 100%;
-    padding: 0px 100px 0px 40px;
+    padding: 1px 90px 1px 40px;
 }
 .logo{
     display: flex;
@@ -112,4 +112,46 @@
 .github:hover {
     transition: .3s;
     font-size: 100px;
+}
+@media (max-width: 1080px) {
+    .logo{
+        display: none;
+    }
+   .login-component {
+       height: 65vh;
+       margin: 90px auto;
+   }
+}
+@media (max-width: 730px) {
+    .login-component {
+        flex-direction: column-reverse;
+        height: 90vh;
+        width: 50%;
+        min-width: 300px;
+    }
+    .form-box { 
+        height: 80%;
+        width: 100%;
+        padding: 0;
+        text-align: center;
+    }
+    .content-login {
+        width: 100%;
+        height: 20%;
+    }
+    .input {
+        margin: 0 15px;
+    }
+    .link-cadastro {
+        text-align: center;
+    }
+    .submit {
+        margin: auto;
+    }
+    .github {
+        font-size: 55px;
+    }
+    .github:hover {
+        font-size: 65px;
+    }
 }
