--- a/interface/src/components/cadastro/cadastro.css
+++ b/interface/src/components/cadastro/cadastro.css
@@ -7,6 +7,7 @@
     margin: 20px auto;
     padding: 0px 0px;
     box-shadow: 10px 10px 14px rgba(0, 0, 0, 0.705);
+    min-width: 300px;
 }
 .header-cadastro {
     background-color: #3f3f40;
@@ -82,8 +83,6 @@
 .finish-form:disabled {
     opacity: 0.5;
 }
-
-
 /*Classes que servem como variaveis*/
 .validacao {
     color: red;
