correção dark mode

--- a/interface/src/components/plataforma/components/dashboard/dashboard.css
+++ b/interface/src/components/plataforma/components/dashboard/dashboard.css
@@ -2,5 +2,8 @@
     height: 100vh;
     width: 100%;
     overflow-y: scroll;
-
+    transition: .3s;
+}
+.backgrounddark {
+    background: url('https://i.pinimg.com/originals/83/21/aa/8321aa7615694700b30be05e118516c4.jpg') ;
 }
