--- a/interface/src/components/plataforma/components/Menu_plat/menu.css
+++ b/interface/src/components/plataforma/components/Menu_plat/menu.css
@@ -8,24 +8,27 @@
     width: 18%;
     height: 100vh;
     padding: 10px;
-    background-color: white; 
+    background-color: white;
     transition: .3s;
-} 
+}
 
 .topo-menu {
     width: 100%;
     flex: 3;
-    border-bottom: 1px solid ;
+    border-bottom: 1px solid;
 }
+
 .meio-menu {
     width: 100%;
     flex: 5;
-    border-bottom: 1px solid ;
+    border-bottom: 1px solid;
 }
-.fim-menu{
+
+.fim-menu {
     width: 100%;
     flex: 2;
 }
+
 /*partes */
 .topo-menu {
     display: flex;
@@ -33,14 +36,16 @@
     align-items: center;
     justify-content: center;
 }
-.user{
+
+.user {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     flex: 2;
 }
-.usericon{
+
+.usericon {
     border: 1px solid;
     padding: 5px;
     border-radius: 50%;
@@ -48,6 +53,7 @@
     color: inherit;
     background-color: white;
 }
+
 .close {
     width: 100%;
     display: flex;
@@ -55,10 +61,12 @@
     justify-content: center;
     flex: 1;
 }
+
 .close-button {
     cursor: pointer;
-    
+
 }
+
 .meio-menu {
     width: 100%;
     display: flex;
@@ -66,6 +74,7 @@
     align-items: center;
     justify-content: center;
 }
+
 .meio-menu-content {
     width: inherit;
     display: flex;
@@ -73,6 +82,7 @@
     align-items: center;
     justify-content: center;
 }
+
 .p-meio-menu {
     width: 100%;
     padding: 2px;
@@ -86,20 +96,23 @@
     border-radius: 10px;
     transition: all ease-in 0.2s;
 }
+
 .p-meio-menu:hover {
     background-color: #ebf0fe;
     border: 1px solid black;
     color: black;
 }
-.icon-menu {    
+
+.icon-menu {
     margin: 0 5px 0 0;
     padding: 3px;
     text-align: center;
     border-radius: 50%;
-    border: 2px solid ;
+    border: 2px solid;
     color: inherit;
     color: inherit;
 }
+
 .text {
     color: #afb4c7;
     color: inherit;
@@ -111,6 +124,7 @@
     align-items: flex-start;
     justify-content: space-evenly;
 }
+
 .button-box {
     display: flex;
     flex-direction: row;
@@ -118,22 +132,22 @@
     justify-content: space-evenly;
     width: 100%;
 }
-.button-darkmode{
+
+.button-darkmode {
     cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    background-color: transparent  ;
+    background-color: transparent;
     border: 2px solid #afb4c7;
     width: 65px;
     padding: 4px 8px;
     border-radius: 100px;
     background-color: #ebf0fe;
 }
+
 .button-darkmode:hover {
     border: 2px solid inherit;
     background-color: #ebf0fe;
 }
+
 .content-darkmode {
     height: 100%;
     background-color: black;
@@ -147,6 +161,7 @@
     display: none;
     transition: .2s;
 }
+
 .center {
     margin: 0 auto;
     border: 2px solid;
@@ -156,16 +171,27 @@
     border-radius: 50%;
     padding: 3px;
 }
+
 .dark {
+    display: flex;
+    align-items: center;
     justify-content: end;
 }
-.menucompclosed{
+
+.light {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+}
+
+.menucompclosed {
     width: 8%;
     display: flex;
     align-items: center;
     justify-content: center;
     transition: .3s;
 }
+
 .link-createtask {
     text-align: start;
     width: 100%;
@@ -177,14 +203,13 @@
     background-color: #1a1c1e;
     color: white;
 }
+
 .p-meio-menu-dark {
     color: white;
 }
+
 .p-meio-menu-dark:hover {
     background-color: #303234;
     border: 1px solid transparent;
     color: white;
 }
-
-
-    
